--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
