--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://mytinerayapplication.herokuapp.com/",
+
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -55,3 +55,5 @@
     ]
   }
 }
+
+  // "proxy": "https://mytinerayapplication.herokuapp.com/",
